fixed favorites grid spacing

--- a/styles/favorites/favorites.sass
+++ b/styles/favorites/favorites.sass
@@ -107,5 +107,4 @@
         z-index: 1000
 
     .main__hero__search-results__search-grid
-        column-gap: 100px
-        row-gap: 100px
+        column-gap: 60px
